--- a/templates/index.html
+++ b/templates/index.html
@@ -124,6 +124,11 @@
                 <label><input type="checkbox" name="classes" value="17"> 狗 (dog, 17)</label>
             </div>
 
+            <label style="margin-top: 10px;">
+                <input type="checkbox" name="enable_speed" value="1" checked>
+                启用测速功能（单位：像素/秒）
+            </label>
+
             <input type="submit" value="上传并处理">
         </form>
     </div>
